--- a/PYME/pom.xml
+++ b/PYME/pom.xml
@@ -59,5 +59,16 @@
 	    <artifactId>c3p0</artifactId>
 	    <version>0.9.1.2</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.primefaces</groupId>
+	    <artifactId>primefaces</artifactId>
+	    <version>5.3</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.primefaces.extensions</groupId>
+	    <artifactId>all-themes</artifactId>
+	    <version>1.0.8</version>
+	    <type>pom</type>
+	</dependency>
   </dependencies>
 </project>
