--- a/PYME/.classpath
+++ b/PYME/.classpath
@@ -33,7 +33,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/ojdbc6.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/ojdbc6.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/ojdbc14.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
