--- a/PYME/.classpath
+++ b/PYME/.classpath
@@ -34,5 +34,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="libs/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="libs/ojdbc14v1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
