--- a/PYME/pom.xml
+++ b/PYME/pom.xml
@@ -71,6 +71,27 @@
 			<version>1.0.8</version>
 			<type>pom</type>
 		</dependency>
+		    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>3.1.0.RELEASE</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
+        <version>4.0.0.RELEASE</version>
+    </dependency>
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>4.3.0.Final</version>
+    </dependency>
+    <dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-core</artifactId>
+	    <version>3.2.8.RELEASE</version>
+	</dependency>
 
 	</dependencies>
 	<build>
