pROYECTO SIN ERRORES ! HAY QUE PROBAR LA PERSISTENCIA DE DATOS!

--- a/PYME/pom.xml
+++ b/PYME/pom.xml
@@ -9,32 +9,29 @@
 	<dependencies>
 
 		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>5.1.0.Final</version>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		    <version>4.0.1.Final</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>5.0.1.Final</version>
+			<version>4.1.0.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>5.0.1.Final</version>
+			<version>4.1.0.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>4.0.7.RELEASE</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>4.1.7.RELEASE</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
@@ -71,28 +68,41 @@
 			<version>1.0.8</version>
 			<type>pom</type>
 		</dependency>
-		    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-core</artifactId>
-        <version>3.1.0.RELEASE</version>
-    </dependency>
+		
+
 
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-orm</artifactId>
-        <version>4.0.0.RELEASE</version>
+        <version>4.1.1.RELEASE</version>
     </dependency>
     <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
-        <version>4.3.0.Final</version>
+        <version>4.1.1.Final</version>
     </dependency>
-    <dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-core</artifactId>
-	    <version>3.2.8.RELEASE</version>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		  <artifactId>spring-core</artifactId>
+		  <version>4.1.1.RELEASE</version>
+		  <scope>compile</scope>
+		  <exclusions>
+		    <exclusion>
+		      <artifactId>commons-logging</artifactId>
+		      <groupId>commons-logging</groupId>
+		    </exclusion>
+		  </exclusions>
+		  </dependency>
+	<dependency>
+	   <groupId>com.sun.faces</groupId>
+	   <artifactId>jsf-api</artifactId>
+	   <version>2.1.7</version>
 	</dependency>
-
+	<dependency>
+	   <groupId>com.sun.faces</groupId>
+	   <artifactId>jsf-impl</artifactId>
+	   <version>2.1.7</version>
+	</dependency>
 	</dependencies>
 	<build>
 		<plugins>
